Increase drawer width to prevent wrapping

--- a/src/component/information-drawer/InformationDrawer.css
+++ b/src/component/information-drawer/InformationDrawer.css
@@ -1,6 +1,6 @@
 .drawer-wrapper {
   position: fixed;
-  width: 250px;
+  width: 312px;
 
   padding: 1rem;
   margin: 1rem;
